welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:2: error: value unary_! is not a member of Int
  if ((you>=8 && !date<=2) || (date>=8 && !you<=2)) {return 2}
                 ^dateFashion:2: error: value unary_! is not a member of Int
  if ((you>=8 && !date<=2) || (date>=8 && !you<=2)) {return 2}
                                          ^